--- a/src/Contacts/Contacts/MainWindow.xaml
+++ b/src/Contacts/Contacts/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+﻿<Window xmlns:Controls="clr-namespace:Contacts.Controls" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,6 +9,21 @@
         Title="Contacts" MinHeight="270" MinWidth="524" Height="270" Width="524" Icon="/Resources/contacts_96x96.ico" Loaded="Window_Loaded" Closing="Window_Closing">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <DataTemplate x:Key="contactTemplate">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="{Binding Name}" DockPanel.Dock="Left" Grid.Row="0" Grid.Column="1" FontWeight="Bold" Margin="3"/>
+                <TextBlock Text="{Binding PhoneNumber}" DockPanel.Dock="Bottom" Grid.Row="1" Grid.Column="1" Margin="3"/>
+                <Image Source="/Resources/contacts_96x96.ico" Grid.RowSpan="2" Height="30" Width="30" Margin="3"/>
+            </Grid>
+        </DataTemplate>
     </Window.Resources>
     <Window.DataContext>
         <ViewModel:MainVM/>
@@ -37,45 +52,21 @@
                     <TextBox HorizontalAlignment="Stretch" Margin="3"/>
                 </DockPanel>
 
-                <ListBox Grid.Row="1" Grid.ColumnSpan="3" Margin="3" ItemsSource="{Binding Contacts}" DisplayMemberPath="Name" SelectedIndex="{Binding SelectedContactIndex}"/>
+                <ListBox Grid.Row="1" Grid.ColumnSpan="3" Margin="3" ItemsSource="{Binding Contacts}" SelectedIndex="{Binding SelectedContactIndex}"
+                         ItemTemplate="{StaticResource contactTemplate}"/>
 
                 <Button Content="Add" Height="25" Width="auto" Margin="3" Command="{Binding AddCommand, Mode=OneWay}" Grid.Row="2" Grid.Column="0"/>
                 <Button Content="Edit" Height="25" Width="auto" Margin="3" Command="{Binding EditCommand, Mode=OneWay}" Grid.Row="2" Grid.Column="1"/>
                 <Button Content="Remove" Height="25" Width="auto" Margin="3" Command="{Binding RemoveCommand, Mode=OneWay}" Grid.Row="2" Grid.Column="2"/>
             </Grid>
         </Border>
-        
+
         <GridSplitter HorizontalAlignment="Left" VerticalAlignment="Top" Width="3" Grid.Column="1" Background="White"/>
-
         <Border Padding="8" Background="#FFF8F8F8" Grid.Column="2">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-            
-                <Image Width="100" Height="100" Source="/Resources/contacts_96x96.ico" Grid.RowSpan="6" Grid.Row="1" Margin="3" VerticalAlignment="Top"/>
-
-                <Label Content="Name:" Grid.Row="0" Grid.Column="1" Margin="3" HorizontalAlignment="Left" Padding="0"/>
-                <TextBox Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding SelectedContact.Name}" IsReadOnly="{Binding CanEditData, ValidatesOnNotifyDataErrors=True}"/>
-
-                <Label Content="Phone Number:" Grid.Row="2" Grid.Column="1" Margin="3" HorizontalAlignment="Left" Padding="0"/>
-                <TextBox Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding SelectedContact.PhoneNumber}" IsReadOnly="{Binding CanEditData, ValidatesOnNotifyDataErrors=True}"/>
-
-                <Label Content="Email:" Grid.Row="4" Grid.Column="1" Margin="3" HorizontalAlignment="Left" Padding="0"/>
-                <TextBox Grid.Row="5" Grid.Column="1" Margin="3" Text="{Binding SelectedContact.Email}" IsReadOnly="{Binding CanEditData, ValidatesOnNotifyDataErrors=True}"/>
-
+            <StackPanel>
+                <Controls:ContactControl DataContext="{Binding SelectedContact}"/>
                 <Button Content="Apply" Margin="3,50,3,50" Grid.Column="1" Grid.Row="6" Height="25" Width="75" HorizontalAlignment="Left" Command="{Binding ApplyCommand, ValidatesOnNotifyDataErrors=True}" Visibility="{Binding CanApplyCommand, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-            </Grid>
+            </StackPanel>
         </Border>
     </Grid>
 </Window>
