--- a/src/Contacts/Contacts/Controls/ContactControl.xaml
+++ b/src/Contacts/Contacts/Controls/ContactControl.xaml
@@ -4,11 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Contacts.Controls" 
-             xmlns:model="clr-namespace:Contacts.Model" 
+             xmlns:model="clr-namespace:Contacts.Model;assembly=Model" 
              xmlns:Contacts="clr-namespace:Contacts" x:Class="Contacts.Controls.ContactControl" 
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance Type={x:Type model:Contact}}">
+             d:DesignHeight="450" d:DesignWidth="800">
+            <!--d:DataContext="{d:DesignInstance Type={x:Type model:Contact}}">-->
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <Style TargetType="TextBox">
